--- a/src/app/policy-management/policy-management.component.less
+++ b/src/app/policy-management/policy-management.component.less
@@ -87,3 +87,18 @@
 input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
     border: 1px solid red;
 }
+.disabledMenu{
+	opacity: 0.3;
+	pointer-events: none;
+}
+.w-2{
+	width: 90% !important;
+}
+.sw-btn-next {
+    color: #000;
+    background: #cccccc;
+	border-color: #cccccc;
+	&:hover{
+		background: #e2dede !important;
+	}
+}
