--- a/src/app/application-onboarding/appliaction-list/appliaction-list.component.html
+++ b/src/app/application-onboarding/appliaction-list/appliaction-list.component.html
@@ -52,7 +52,7 @@
                       <td>{{listData.name}}</td>
                       <td>{{listData.description}}</td>
                       <td>
-                            <!-- <a *ngIf = "listData.status === 'ACTIVE' ? true : false"  class="text-muted"  data-toggle="tooltip" data-placement="top" title="Edit" (click)="editApplication(i)"><i class="fas fa-pencil-alt"></i></a> -->
+                            <a *ngIf = "listData.status === 'ACTIVE' ? true : false"  class="text-muted"  data-toggle="tooltip" data-placement="top" title="Edit" (click)="editApplication(i)"><i class="fas fa-pencil-alt"></i></a>
                             <a *ngIf = "listData.status === 'ACTIVE' ? true : false" (click)="appDelete(listData.name,i)"  class="text-muted ml-2"  data-toggle="tooltip" data-placement="top" title="Delete"><i class="fas fa-trash-alt"></i></a>
                           </td>
                     </tr>
