Changes related to audit,apponboarding and policy management

--- a/src/app/application-onboarding/appliaction-list/appliaction-list.component.html
+++ b/src/app/application-onboarding/appliaction-list/appliaction-list.component.html
@@ -31,6 +31,7 @@
                       <span class="input-group-text" id="modal-search"><i class="fa fa-search"></i></span>
                     </div>
                     <input type="text" class="form-control" [(ngModel)]="searchData" (keyup)="onSearch()" />
+                    <i (click)="refreshList()" data-toggle="tooltip" data-placement="top" title="Refresh List" class="refresh-icon fa refreshList">&#xf021;</i>
                   </div>
                 </div>
 
