--- a/src/app/policy-management/policy-management.component.less
+++ b/src/app/policy-management/policy-management.component.less
@@ -74,7 +74,7 @@
     }
     .policyList{
         max-height: 700px;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
     .policyDetailText{
         height: 500px;
