--- a/src/app/application-onboarding/appliaction-list/appliaction-list.component.less
+++ b/src/app/application-onboarding/appliaction-list/appliaction-list.component.less
@@ -48,3 +48,9 @@ tbody{
 		cursor: pointer;
 	}
 }
+.refreshList{
+	padding: 9px 10px 5px 12px;;
+    font-size: large;
+    cursor: pointer;
+    color: #0ea4fb;
+}
