--- a/src/app/application-dashboard/application-dashboard.component.html
+++ b/src/app/application-dashboard/application-dashboard.component.html
@@ -99,15 +99,13 @@
                 <tr>
                   <th>Service</th>
                   <th>Score</th>
-                  <th>Link</th>
                   <th>Status</th>
                 </tr>
               </thead>
               <tbody>
                 <tr *ngFor="let service of serviceData; let i=index">
-                  <td>{{service.name}}</td>
+                  <td class="{{service.status === 'N/A' ? 'disabledLink': ''}}"><a [href]="service.status === 'N/A' ? '': redirectLink(service.name,selectedApplicationName)">{{service.name}}</a></td>
                   <td>{{service.score}}</td>
-                  <td class="{{service.status === 'N/A' ? 'disabledLink': ''}}"><a [href]="service.status === 'N/A' ? '': redirectLink(service.name,selectedApplicationName)">{{service.status === 'N/A' ? '-': 'Link'}}</a></td>
                   <td
                     [ngClass]="{'text-danger':service.status == 'FAIL' || service.status == 'TERMINAL','text-success':service.status == 'PASS'|| service.status == 'SUCCEEDED'}">
                     {{service.status}}</td>
