--- a/src/app/application-onboarding/application-onboarding.component.html
+++ b/src/app/application-onboarding/application-onboarding.component.html
@@ -7,7 +7,7 @@
                         <li class="nav-item" routerLink="/setup/applications" routerLinkActive="active">
                             <a class="nav-link">Applications</a>
                         </li>
-                        <li class="nav-item" routerLink="datasource" routerLinkActive="active">
+                        <li class="nav-item disabledMenu">
                             <a class="nav-link">Data Sources</a>
                         </li>
                         <li class="nav-item disabledMenu">
