--- a/src/app/application-onboarding/dynamic-accounts/dynamic-accounts.component.html
+++ b/src/app/application-onboarding/dynamic-accounts/dynamic-accounts.component.html
@@ -63,7 +63,7 @@
                         <td *ngIf="accountsData.permissions.WRITE != undefined">{{accountsData.permissions.WRITE.toString()}}</td>
                         <td *ngIf="accountsData.permissions.EXECUTE != undefined">{{accountsData.permissions.EXECUTE.toString()}}</td>
                         <td>
-                          <a (click)="editAccount(accountsData)"   class="text-muted ml-2" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fas fa-pencil-alt"></i></a>
+                          <a (click)="editAccount(accountsData,'editAcc')"   class="text-muted ml-2" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fas fa-pencil-alt"></i></a>
                           <a (click)="deleteAccount(accountsData,i)" class="text-muted ml-2" data-toggle="tooltip"  data-placement="top" title="Delete"><i class="fas fa-trash-alt"></i></a>
                         </td>
                       </tr>
