--- a/src/app/audit/audit.component.html
+++ b/src/app/audit/audit.component.html
@@ -254,6 +254,8 @@
                 <button type="submit"  *ngIf="advanSearchMode" class="btn btn-default mb-2" (click)="advancedModeToggle()" data-toggle="tooltip" data-placement="top"
                     title="Switch to basic search"><img src="../../assets/images/code-icon.png"
                     alt="icon" style="display: block; margin: 4px 0px;" /></button>
+                <button type="submit" class="btn btn-default mb-2 ml-sm-2" *ngIf="selectedSaveFilter !== ''" (click)="resetFilters()" data-toggle="tooltip" data-placement="top"
+                title="Clear filter"><i class="fa fa-redo"></i> &nbsp;Clear</button>
 
                 <div class="ml-auto d-flex">
                   <div class="form-group mb-2">
